--- a/package.json
+++ b/package.json
@@ -9,8 +9,14 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@types/bcrypt-nodejs": "^0.0.30",
     "@types/express": "^4.17.1",
-    "express": "^4.17.1"
+    "@types/mongoose": "^5.5.23",
+    "bcrypt-nodejs": "^0.0.3",
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.7.6",
+    "nodemon": "^1.19.4"
   },
   "devDependencies": {
     "tslint": "^5.20.0",
