--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
     "@types/bcrypt-nodejs": "^0.0.30",
     "@types/express": "^4.17.1",
     "@types/mongoose": "^5.5.23",
+    "@types/passport": "^1.0.1",
+    "@types/passport-http": "^0.3.8",
     "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mongoose": "^5.7.6",
-    "nodemon": "^1.19.4"
+    "nodemon": "^1.19.4",
+    "passport": "^0.4.0",
+    "passport-http": "^0.3.0"
   },
   "devDependencies": {
     "tslint": "^5.20.0",
