--- a/package.json
+++ b/package.json
@@ -2,27 +2,45 @@
   "name": "pokemonstorage",
   "main": "dist/server.js",
   "scripts": {
-    "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
-    "build": "tsc",
-    "prestart": "npm run build",
+    "clean": "rimraf dist/*",
+    "copy-assets": "ts-node dist/tools/copyAssets",
+    "lint": "tslint -c tslint.json -p tsconfig.json --fix",
+    "tsc": "tsc",
+    "build": "npm-run-all clean tsc copy-assets",
+    "dev:start": "npm-run-all build start",
+    "dev": "nodemon --watch src -e ts,ejs --exec npm run dev:start",
     "start": "node .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "@types/bcrypt-nodejs": "^0.0.30",
+    "@types/ejs": "^2.6.3",
     "@types/express": "^4.17.1",
+    "@types/express-session": "^1.15.15",
     "@types/mongoose": "^5.5.23",
+    "@types/oauth2orize": "^1.8.7",
     "@types/passport": "^1.0.1",
     "@types/passport-http": "^0.3.8",
     "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.19.0",
+    "ejs": "^2.7.1",
     "express": "^4.17.1",
+    "express-session": "^1.17.0",
     "mongoose": "^5.7.6",
     "nodemon": "^1.19.4",
+    "oauth2orize": "^1.11.0",
     "passport": "^0.4.0",
-    "passport-http": "^0.3.0"
+    "passport-http": "^0.3.0",
+    "passport-http-bearer": "^1.0.1"
   },
   "devDependencies": {
+    "@types/fs-extra": "^8.0.1",
+    "@types/shelljs": "^0.8.5",
+    "fs-extra": "^8.1.0",
+    "npm-run-all": "^4.1.5",
+    "rimraf": "^3.0.0",
+    "shelljs": "^0.8.3",
+    "ts-node": "^8.4.1",
     "tslint": "^5.20.0",
     "typescript": "^3.6.4"
   },
